# lab24-eval-guardrails-NguyenTriCao-2A202600223

./: .gitignore  README.md  config.py  main.py  pyproject.toml  ragas_report.json  requirements.txt  test_set.json
.github/workflows/: eval-gate.yml
analysis/: failure_analysis.md  group_report.md
analysis/reflections/: reflection_NguyenTriCao.md
data/: BCTC.md  Nghi_dinh_so_13-2023_ve_bao_ve_du_lieu_ca_nhan_508ee.md
lab24-eval-guardrails/: README.md
lab24-eval-guardrails-NguyenTriCao/: README.md
lab24-eval-guardrails-NguyenTriCao/phase-a/: failure_analysis.md  phase_a_testset_gen.py  ragas_results.csv  testset_v1.csv
lab24-eval-guardrails-NguyenTriCao/phase-b/: absolute_scores.csv  phase_b_calibration.py  phase_b_judge_pairwise.py
lab24-eval-guardrails-NguyenTriCao/phase-c/: full_pipeline.py  input_guard_pii.py  latency_benchmark.csv  output_guard_llama.py
lab24-eval-guardrails-NguyenTriCao/phase-d/: blueprint.md
lab24-eval-guardrails/phase-a/: failure_analysis.md  phase_a_run_eval.py  phase_a_testset_gen.py  ragas_results.csv  ragas_summary.json  testset_v1.csv
lab24-eval-guardrails/phase-b/: absolute_scores.csv  human_labels.csv  judge_bias_report.md  pairwise_results.csv  phase_b_judge_absolute.py  phase_b_judge_pairwise.py
lab24-eval-guardrails/phase-c/: adversarial_test_inputs.csv  adversarial_test_results.csv  input_guard_topic.py  latency_benchmark.csv  run_adversarial.py  run_benchmark.py
reports/: naive_baseline_report.json  ragas_report.json
src/: m1_chunking.py  m2_search.py  m3_rerank.py  m4_eval.py  m5_enrichment.py  pipeline.py
(+2 files in other folders)
