[project]
name = "day18-track3-production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=6.1.0",
    "datasets>=4.8.5",
    "flagembedding>=1.4.0",
    "langchain-openai>=1.2.1",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "underthesea>=9.4.0",
]
